# opendriverstudio

./: README.md  pyproject.toml  typing_defs.py
.github/workflows/: tests.yml  tests_and_type_checker.yml
src/opendriverstudio/api/: main.py
src/opendriverstudio/api/v1/: drivers.py
src/opendriverstudio/database/: database.py  db_schema.sql  schema.py
tests/: conftest.py  data_for_tests.py  test_api_drivers.py  test_database.py
